...
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_hint">Password</string>
    <string name="email_address_hint">Email Address</string>
    <string name="login_button_text">Login</string>
    <string name="add_bag_title">Add Bag</string>
    <string name="item_detail_title">Item</string>
    <string name="item_list_title">Track Items</string>
    <string name="app_tag_line">Store | Track | Forget</string>
    <string name="logout_title">Logout</string>
    <string name="action_delete">Delete</string>
    <string name="item_deleted_successfully">Item deleted</string>
...
